test/corpus/arrays.txt
================================================================================
empty array
================================================================================
={}
--------------------------------------------------------------------------------

(source_file
  (array))

================================================================================
row of scalars
================================================================================
={1, 2, 3}
--------------------------------------------------------------------------------

(source_file
  (array
    (number)
    (number)
    (number)))

================================================================================
two-by-two array
================================================================================
={1, 2; 3, 4}
--------------------------------------------------------------------------------

(source_file
  (array
    (number)
    (number)
    (number)
    (number)))

================================================================================
array of ranges
================================================================================
={A1:A5; B1:B5}
--------------------------------------------------------------------------------

(source_file
  (array
    (binary_expression
      (reference)
      (reference))
    (binary_expression
      (reference)
      (reference))))

================================================================================
array with expressions
================================================================================
={SUM(A:A), "n/a"; 1 + 2, TRUE}
--------------------------------------------------------------------------------

(source_file
  (array
    (call_expression
      (identifier)
      (arguments
        (binary_expression
          (identifier)
          (identifier))))
    (string)
    (binary_expression
      (number)
      (number))
    (boolean)))
