test/corpus/calls.txt
================================================================================
empty call
================================================================================
=NOW()
--------------------------------------------------------------------------------

(source_file
  (call_expression
    (identifier)))

================================================================================
simple call
================================================================================
=SUM(1, 2)
--------------------------------------------------------------------------------

(source_file
  (call_expression
    (identifier)
    (arguments
      (number)
      (number))))

================================================================================
blank middle argument is preserved distinct from empty string
================================================================================
=IF(A1, , "y")
--------------------------------------------------------------------------------

(source_file
  (call_expression
    (identifier)
    (arguments
      (reference)
      (string))))

================================================================================
blank leading argument
================================================================================
=IF(, A1, B1)
--------------------------------------------------------------------------------

(source_file
  (call_expression
    (identifier)
    (arguments
      (reference)
      (reference))))

================================================================================
blank trailing argument
================================================================================
=SPLIT(A1, ",", )
--------------------------------------------------------------------------------

(source_file
  (call_expression
    (identifier)
    (arguments
      (reference)
      (string))))

================================================================================
reference-shaped function name
================================================================================
=LOG10(100)
--------------------------------------------------------------------------------

(source_file
  (call_expression
    (reference)
    (arguments
      (number))))

================================================================================
nested calls
================================================================================
=IFERROR(VLOOKUP(A1, B:C, 2, FALSE), "missing")
--------------------------------------------------------------------------------

(source_file
  (call_expression
    (identifier)
    (arguments
      (call_expression
        (identifier)
        (arguments
          (reference)
          (binary_expression
            (identifier)
            (identifier))
          (number)
          (boolean)))
      (string))))

================================================================================
case-insensitive function names
================================================================================
=sum(arrayformula(A1:A9 * 2))
--------------------------------------------------------------------------------

(source_file
  (call_expression
    (identifier)
    (arguments
      (call_expression
        (identifier)
        (arguments
          (binary_expression
            (binary_expression
              (reference)
              (reference))
            (number)))))))
