test/corpus/errors.txt
================================================================================
every sheets error literal
================================================================================
={#REF!, #N/A, #VALUE!, #DIV/0!; #NAME?, #NULL!, #NUM!, #ERROR!}
--------------------------------------------------------------------------------

(source_file
  (array
    (error)
    (error)
    (error)
    (error)
    (error)
    (error)
    (error)
    (error)))

================================================================================
error literal as an argument
================================================================================
=IF(ISNA(A1), #N/A, A1)
--------------------------------------------------------------------------------

(source_file
  (call_expression
    (identifier)
    (arguments
      (call_expression
        (identifier)
        (arguments
          (reference)))
      (error)
      (reference))))
