test/corpus/literals.txt
================================================================================
integer
================================================================================
=42
--------------------------------------------------------------------------------

(source_file
  (number))

================================================================================
decimal and leading-dot numbers
================================================================================
=1.5 + .25
--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (number)
    (number)))

================================================================================
scientific notation
================================================================================
=6.02e23 + 1E-9
--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (number)
    (number)))

================================================================================
string with escaped quote
================================================================================
="say ""hi"" now"
--------------------------------------------------------------------------------

(source_file
  (string))

================================================================================
booleans in any case
================================================================================
=IF(TRUE, true, False)
--------------------------------------------------------------------------------

(source_file
  (call_expression
    (identifier)
    (arguments
      (boolean)
      (boolean)
      (boolean))))

================================================================================
percent literal
================================================================================
=10% + B1%
--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (postfix_expression
      (number))
    (postfix_expression
      (reference))))

================================================================================
named range with non-ASCII letters
================================================================================
=näme + 1
--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (identifier)
    (number)))

================================================================================
named range in a non-Latin script
================================================================================
=кирилица
--------------------------------------------------------------------------------

(source_file
  (identifier))

================================================================================
dotted name in a non-Latin script
================================================================================
=日本語.total
--------------------------------------------------------------------------------

(source_file
  (identifier))

================================================================================
bare formula without equals sign
================================================================================
SUM(1, 2)
--------------------------------------------------------------------------------

(source_file
  (call_expression
    (identifier)
    (arguments
      (number)
      (number))))
