test/corpus/references.txt
================================================================================
plain and anchored cells
================================================================================
=A1 + $A$1 + $A1 + A$1
--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (binary_expression
      (binary_expression
        (reference)
        (reference))
      (reference))
    (reference)))

================================================================================
sheet-qualified cell
================================================================================
=stock_data!$AE$3
--------------------------------------------------------------------------------

(source_file
  (reference))

================================================================================
quoted sheet name with escaped quote
================================================================================
='it''s a sheet'!A1
--------------------------------------------------------------------------------

(source_file
  (reference))

================================================================================
anchored column range
================================================================================
=SUM(stock_data!$A:$A)
--------------------------------------------------------------------------------

(source_file
  (call_expression
    (identifier)
    (arguments
      (binary_expression
        (reference)
        (reference)))))

================================================================================
bare column range is identifier-colon-identifier
================================================================================
=SUM(A:A)
--------------------------------------------------------------------------------

(source_file
  (call_expression
    (identifier)
    (arguments
      (binary_expression
        (identifier)
        (identifier)))))

================================================================================
open-ended range from a cell
================================================================================
=SUM(B6:B)
--------------------------------------------------------------------------------

(source_file
  (call_expression
    (identifier)
    (arguments
      (binary_expression
        (reference)
        (identifier)))))

================================================================================
whole-row range
================================================================================
=SUM(1:1)
--------------------------------------------------------------------------------

(source_file
  (call_expression
    (identifier)
    (arguments
      (binary_expression
        (number)
        (number)))))

================================================================================
sheet-qualified bare column
================================================================================
=COUNTA(stock_data!P:P)
--------------------------------------------------------------------------------

(source_file
  (call_expression
    (identifier)
    (arguments
      (binary_expression
        (reference)
        (identifier)))))

================================================================================
range into a function result
================================================================================
=stock_data!$A$3:INDEX(stock_data!$A:$A, rLastRow)
--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (reference)
    (call_expression
      (identifier)
      (arguments
        (binary_expression
          (reference)
          (reference))
        (identifier)))))

================================================================================
sheet-qualified row range
================================================================================
=SUM(Sheet1!1:2)
--------------------------------------------------------------------------------

(source_file
  (call_expression
    (identifier)
    (arguments
      (binary_expression
        (reference)
        (number)))))

================================================================================
quoted-sheet row range
================================================================================
=SUM('My Sheet'!1:2)
--------------------------------------------------------------------------------

(source_file
  (call_expression
    (identifier)
    (arguments
      (binary_expression
        (reference)
        (number)))))

================================================================================
anchored row range
================================================================================
=SUM(Sheet1!$1:$3)
--------------------------------------------------------------------------------

(source_file
  (call_expression
    (identifier)
    (arguments
      (binary_expression
        (reference)
        (reference)))))

================================================================================
unquoted sheet name with non-ASCII letters
================================================================================
=Umsätze!A1
--------------------------------------------------------------------------------

(source_file
  (reference))
