test/corpus/tables.txt
================================================================================
table column with a space in its name
================================================================================
=SUM(Sales_Tracker[Sales Amount])
--------------------------------------------------------------------------------

(source_file
  (call_expression
    (identifier)
    (arguments
      (table_reference
        (identifier)
        (table_column)))))

================================================================================
table specifier
================================================================================
=COUNTA(Table1[#ALL])
--------------------------------------------------------------------------------

(source_file
  (call_expression
    (identifier)
    (arguments
      (table_reference
        (identifier)
        (table_specifier)))))

================================================================================
compound specifier plus column range
================================================================================
=Table1[[#ALL],[Column 1]:[Column 3]]
--------------------------------------------------------------------------------

(source_file
  (table_reference
    (identifier)
    (table_specifier)
    (table_column)
    (table_column)))

================================================================================
compound headers plus data
================================================================================
=Table1[[#HEADERS],[#DATA]]
--------------------------------------------------------------------------------

(source_file
  (table_reference
    (identifier)
    (table_specifier)
    (table_specifier)))

================================================================================
whole table is a plain identifier
================================================================================
=SUM(Table1)
--------------------------------------------------------------------------------

(source_file
  (call_expression
    (identifier)
    (arguments
      (identifier))))

================================================================================
table reference in an expression
================================================================================
=SUM(DeptSales[Amount]) / COUNTA(DeptSales[Region])
--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (call_expression
      (identifier)
      (arguments
        (table_reference
          (identifier)
          (table_column))))
    (call_expression
      (identifier)
      (arguments
        (table_reference
          (identifier)
          (table_column))))))

================================================================================
chip extraction on a table column
================================================================================
=Table1[Column 1].[file name]
--------------------------------------------------------------------------------

(source_file
  (table_reference
    (identifier)
    (table_column)
    (chip_field)))

================================================================================
chip extraction as an argument
================================================================================
=IF(Table1[Column 1]="","",Table1[Column 1].[file name])
--------------------------------------------------------------------------------

(source_file
  (call_expression
    (identifier)
    (arguments
      (binary_expression
        (table_reference
          (identifier)
          (table_column))
        (string))
      (string)
      (table_reference
        (identifier)
        (table_column)
        (chip_field)))))

================================================================================
chip field must not be a specifier
:error
================================================================================
=Table1[Column 1].[#ALL]
--------------------------------------------------------------------------------

================================================================================
chip field must be bracketed
:error
================================================================================
=Table1[Column 1].name
--------------------------------------------------------------------------------

================================================================================
chip extraction on a specifier base is an error
:error
================================================================================
=Table1[#ALL].[file name]
--------------------------------------------------------------------------------

================================================================================
chip extraction on a compound base is an error
:error
================================================================================
=Table1[[#ALL],[Column 1]:[Column 3]].[file name]
--------------------------------------------------------------------------------
